force-app/main/default/objects/ShopifyOrder__c/ShopifyOrder__c.object-meta.xml
<CustomObject>
    <enableHistory>false</enableFeeds>
    <label>Shopify Order</label>
    <nameField>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shopify Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>