force-app/main/default/objects/ShopifyOrder__c/fields/OrderStatus__c.field-meta.xml
<CustomField>
    <fullName>OrderStatus__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>open</fullName>
                <label>Open</label>
            </value>
            <value>
                <fullName>closed</fullName>
                <label>Closed</label>
            </value>
            <value>
                <fullName>cancelled</fullName>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>pending</fullName>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>