force-app/main/default/objects/ShopifyOrder__c/fields/ShopifyOrderId__c.field-meta.xml
<CustomField>
    <fullName>ShopifyOrderId__c</fullName>
    <externalId>true</externalId>
    <label>Shopify Order ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>